Adding first draft of sphinx documentation

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,10 @@ Temporary Items
 ## SpinVeyor/MATLAB stuff
 ##---------------------------------------------------
 SpinVeyor/work
+
+##---------------------------------------------------
+## Python/Sphinx stuff
+##---------------------------------------------------
+env
+# sphinx build folder
+_build
